--- a/_blog/20251027-000-test.md
+++ b/_blog/20251027-000-test.md
@@ -2,6 +2,9 @@
 title: 'test'
 date: 2025-10-27
 permalink: /news/2025/10/test/
+header:
+  teaser: images/kim_lab.png
+caption: "test"
 ---
 
 test.
