--- a/_blog/20251027-000-test.md
+++ b/_blog/20251027-000-test.md
@@ -3,7 +3,7 @@ title: 'test'
 date: 2025-10-27
 permalink: /news/2025/10/test/
 header:
-  teaser: images/kim_lab.png
+  teaser: /images/kim_lab.png
 caption: "test"
 ---
 
