changed mp4 to gif for protein

--- a/_projects/20250420-000-sr-thesis.md
+++ b/_projects/20250420-000-sr-thesis.md
@@ -1,6 +1,8 @@
 ---
-title: 'cryoMEM: Exploring Spherically-Constrained ab initio Reconstruction of Native-State Membrane Proteins'
+title: 'Senior Thesis: Exploring Spherically-Constrained ab initio Reconstruction of Native-State Membrane Proteins'
 date: 2025-04-20
 permalink: /projects/2025/04/sr_thesis/
+header:
+  teaser: /files/cryoMEM_VATPase.mp4
 ---
 
