--- a/_projects/20250421-000-sr-thesis.md
+++ b/_projects/20250421-000-sr-thesis.md
@@ -13,7 +13,7 @@ tags:
 
 # tl;dr
 
-I developed a method to reconstruct a 3D volume of a V-type ATPase, a membrane-embedded protein in synaptic vesicles, from cryo-EM images. A prior was established on each particle's in-plane and tilt angles by comparing their position relative to the centroid of the vesicles they were embedded in. This reduced the search space for the angle of each particle from $SO(3)$, which has three DoF, to $SO(2)$, which only has 1 DoF. This allowed for a more efficient search for the optimal orientation of each particle. This method was successfully evaluated on synthetic data and showed promision results on real data.
+I developed a method to reconstruct a 3D volume of a V-type ATPase, a membrane-embedded protein in synaptic vesicles, from cryo-EM images. A prior was established on each particle's in-plane and tilt angles by comparing their position relative to the centroid of the vesicles they were embedded in. This reduced the search space for the angle of each particle from \\(SO(3)\\), which has three DoF, to \\(SO(2)\\), which only has 1 DoF. This allowed for a more efficient search for the optimal orientation of each particle. This method was successfully evaluated on synthetic data and showed promision results on real data.
 
 # Background
 
