working on overview

--- a/_projects/20250421-000-sr-thesis.md
+++ b/_projects/20250421-000-sr-thesis.md
@@ -17,6 +17,21 @@ I developed a method to reconstruct a 3D volume of a V-type ATPase, a membrane-e
 
 # Background
 
-## 
+## Cryo-EM Background
 
-Electron cryo-microscopy, or cryo-EM, is a technique used for 
+Electron cryo-microscopy, or cryo-EM, is a technique used for the determination of the 3D structure of biomolecules, chiefly proteins. It uses a beam of electrons to image a thin frozen sample, and the resultant scattering of the electrons make up the image. While there may be *some* orientation bias for the particles in the vitreous ice, the particles' angles of rotation are random. To reconstuct, the rotation angles, those being:
+1. In-plane angle (azimuthal angle), \\(\psi\\)
+2. Tilt angle, \\(\theta\\)
+3. Out-of-plane angle, \\(\phi\\)
+
+must be determined.
+
+<figure style="text-align: center;">
+  <img src="../images/cryo-em/cryoem_prep.png" alt="Cryo-EM Preparation" style="display:block; margin:auto; max-width:350px; width:100%;">
+  <figcaption style="font-size:0.95em; margin-top:0.5em;">
+    Figure 1: Schematic of cryo-EM sample preparation and imaging workflow. (Dhakal, 2023) [^1]
+  </figcaption>
+</figure>
+
+[^1]: Dhakal, Ashwin & Gyawali, Rajan & Wang, Liguo & Cheng, Jianlin. (2023). A large expert-curated cryo-EM image dataset for machine learning protein particle picking. Scientific Data. 10. 10.1038/s41597-023-02280-2. 
+
