added chris lab

--- a/_projects/20250421-000-sr-thesis.md
+++ b/_projects/20250421-000-sr-thesis.md
@@ -27,11 +27,11 @@ Electron cryo-microscopy, or cryo-EM, is a technique used for the determination 
 must be determined.
 
 <figure style="text-align: center;">
-  <img src="../images/cryo-em/cryoem_prep.png" alt="Cryo-EM Preparation" style="display:block; margin:auto; max-width:350px; width:100%;">
+  <img src="/images/cryo-em/cryoem_prep.png" alt="Cryo-EM Preparation" style="display:block; margin:auto; max-width:350px; width:100%;">
   <figcaption style="font-size:0.95em; margin-top:0.5em;">
     Figure 1: Schematic of cryo-EM sample preparation and imaging workflow. (Dhakal, 2023) [^1]
   </figcaption>
 </figure>
 
-[^1]: Dhakal, Ashwin & Gyawali, Rajan & Wang, Liguo & Cheng, Jianlin. (2023). A large expert-curated cryo-EM image dataset for machine learning protein particle picking. Scientific Data. 10. 10.1038/s41597-023-02280-2. 
+[^1]: Dhakal, Ashwin & Gyawali, Rajan & Wang, Liguo & Cheng, Jianlin. (2023). A large expert-curated cryo-EM image dataset for machine learning protein particle picking. Scientific Data. 10. 10.1038/s41597-023-02280-2.
 
