testing something out

--- a/_projects/20250421-000-sr-thesis.md
+++ b/_projects/20250421-000-sr-thesis.md
@@ -13,7 +13,7 @@ tags:
 
 # tl;dr
 
-I developed a method to reconstruct a 3D volume of a V-type ATPase, a membrane-embedded protein in synaptic vesicles, from cryo-EM images. A prior was established on each particle's in-plane and tilt angles by comparing their position relative to the centroid of the vesicles they were embedded in. This reduced the search space for the angle of each particle from \\(SO(3)\\), which has three DoF, to \\(SO(2)\\), which only has 1 DoF. This allowed for a more efficient search for the optimal orientation of each particle. This method was successfully evaluated on synthetic data and showed promision results on real data.
+I developed a method to reconstruct a 3D volume of a V-type ATPase, a membrane-embedded protein in synaptic vesicles, from cryo-EM images. A prior was established on each particle's in-plane and tilt angles by comparing their position relative to the centroid of the vesicles they were embedded in. This reduced the search space for the angle of each particle from \\(SO(3)\\), which has three DoF, to \\(SO(2)\\), which only has 1 DoF. This allowed for a more efficient search for the optimal orientation of each particle. This method was successfully evaluated on synthetic data and showed promising results on real data.
 
 # Background
 
@@ -26,12 +26,12 @@ Electron cryo-microscopy, or cryo-EM, is a technique used for the determination 
 
 must be determined.
 
-<figure style="text-align: center;">
-  <img src="/images/cryo-em/cryoem_prep.png" alt="Cryo-EM Preparation" style="display:block; margin:auto; max-width:350px; width:100%;">
-  <figcaption style="font-size:0.95em; margin-top:0.5em;">
-    Figure 1: Schematic of cryo-EM sample preparation and imaging workflow. (Dhakal, 2023) [^1]
-  </figcaption>
-</figure>
+<figcaption style="font-size:0.95em; margin-top:0.5em;">
+  Figure 1: Schematic of cryo-EM sample preparation and imaging workflow. (Dhakal, 2023) <a href="#dhakal2023">[1]</a>
+</figcaption>
+
+test
+
 
 [^1]: Dhakal, Ashwin & Gyawali, Rajan & Wang, Liguo & Cheng, Jianlin. (2023). A large expert-curated cryo-EM image dataset for machine learning protein particle picking. Scientific Data. 10. 10.1038/s41597-023-02280-2.
 
