--- a/_projects/20250421-000-sr-thesis.md
+++ b/_projects/20250421-000-sr-thesis.md
@@ -26,9 +26,8 @@ Electron cryo-microscopy, or cryo-EM, is a technique used for the determination 
 
 must be determined.
 
-<figcaption style="font-size:0.95em; margin-top:0.5em;">
-  Figure 1: Schematic of cryo-EM sample preparation and imaging workflow. (Dhakal, 2023) <a href="#dhakal2023">[1]</a>
-</figcaption>
+![Cryo-EM Preparation](/images/cryo-em/cryoem_prep.png)
+*Figure 1: Schematic of cryo-EM sample preparation and imaging workflow. (Dhakal, 2023) [^1]*
 
 test
 
