--- a/_projects/20250421-000-sr-thesis.md
+++ b/_projects/20250421-000-sr-thesis.md
@@ -29,7 +29,7 @@ must be determined.
 ![Cryo-EM Preparation](/images/cryo-em/cryoem_prep.png)
 *Figure 1: Schematic of cryo-EM sample preparation and imaging workflow. (Dhakal, 2023) [^1]*
 
-test
+test2
 
 
 [^1]: Dhakal, Ashwin & Gyawali, Rajan & Wang, Liguo & Cheng, Jianlin. (2023). A large expert-curated cryo-EM image dataset for machine learning protein particle picking. Scientific Data. 10. 10.1038/s41597-023-02280-2.
